--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!--
+      ________/\\\\\\\\\____________/\\\___________________________/\\\\\\\\\_______________/\\\______________/\\\_        
+       _____/\\\////////____________\/\\\_________________________/\\\\\\\\\\\\\____________\/\\\_____________\/\\\_       
+        ___/\\\/_____________________\/\\\________________________/\\\/////////\\\___________\/\\\_____________\/\\\_      
+         __/\\\_______________________\/\\\_______________________\/\\\_______\/\\\___________\//\\\____/\\\____/\\\__     
+          _\/\\\_______________________\/\\\_______________________\/\\\\\\\\\\\\\\\____________\//\\\__/\\\\\__/\\\___    
+           _\//\\\______________________\/\\\_______________________\/\\\/////////\\\_____________\//\\\/\\\/\\\/\\\____   
+            __\///\\\____________________\/\\\_______________________\/\\\_______\/\\\______________\//\\\\\\//\\\\\_____  
+             ____\////\\\\\\\\\___________\/\\\\\\\\\\\\\\\___________\/\\\_______\/\\\_______________\//\\\__\//\\\______ 
+              _______\/////////____________\///////////////____________\///________\///_________________\///____\///_______
+
+                                                            Site by CLAW 🦅
+  -->
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
