--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
                                                             Site by CLAW 🦅
   -->
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/LOGO-19.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
