--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Shabu siy restaurant"
+      content="Shabu Siy Restaurant"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
